--- a/packages/core/src/styles/timeline.scss
+++ b/packages/core/src/styles/timeline.scss
@@ -72,6 +72,7 @@
 
   .ec-time {
     border-left: 1px solid var(--ec-border-color);
+    border-top: 1px solid var(--ec-border-color) !important;
     box-sizing: border-box;
     font-size: .95em;
     min-height: 24px;
@@ -213,7 +214,8 @@ article {
 
       .ec-day-head {
         border-top: 1px solid var(--ec-border-color) !important;
-        border-bottom: 1px solid var(--ec-border-color) !important;
+        // border-bottom: 1px solid var(--ec-border-color) !important;
+        border-bottom: 0px solid var(--ec-border-color) !important;
         border-right: 0px;
       }
 
@@ -221,3 +223,7 @@ article {
 
   }
 }
+
+// .ec-month:not(:first-child) {
+//   border-left: 1px solid var(--ec-border-color);
+// }
